Fixed some spacing and added footer in works-example 1

--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,14 @@ h1{
 }
 
 /* start of project example css */
+.works-page-title {
+    padding-top: 10px;
+}
+
+.works-page-link {
+    padding-bottom: 10px;
+}
+
 .works-example-row {
     /* padding-top: 40px; */
 }
